# ramble

./: .gitignore  CMakeLists.txt  run.bat
app/: compiler.cpp
docs/: syntax.md
examples/: demo.rmbl  functions.rmbl  tokens.rmbl  variables.rmbl
grammar/: RambleLexer.g4  RambleParser.g4
grammar/.antlr/: RambleLexer.interp  RambleLexer.java  RambleParser.interp  RambleParser.java  RambleParser.tokens
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  IVisitor.hpp  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  expression.cpp  expression.hpp  statement.cpp  statement.hpp  type.hpp
src/ast/expressions/: CallExpr.cpp  CallExpr.hpp  ExprVisitor.hpp  FloatLiteral.cpp  FloatLiteral.hpp  IExpr.hpp  IdentExpr.cpp  IdentExpr.hpp  InfixExpr.cpp  InfixExpr.hpp  IntLiteral.cpp  IntLiteral.hpp  PostfixExpr.cpp  PostfixExpr.hpp  PrefixExpr.cpp  PrefixExpr.hpp  RuneLiteral.cpp  RuneLiteral.hpp  StringLiteral.cpp  StringLiteral.hpp
src/ast/statements/: BlockStmt.cpp  BlockStmt.hpp  ExprStmt.cpp  (+11 more)
src/codegen/: CMakeLists.txt  codegen.cpp  codegen.hpp
src/errors/: CMakeLists.txt  error.hpp
src/hir/: ASTWalker.cpp  CMakeLists.txt  HVisitor.cpp  HVisitor.hpp  expression.cpp  hir.cpp  hir.hpp  statement.cpp
src/lexer/: CMakeLists.txt  kind.cpp  kind.hpp  lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/mir/: CMakeLists.txt  mir.hpp
src/package/: CMakeList.txt  package.cpp  package.hpp
src/parser/: CMakeLists.txt  expression.cpp  parser.cpp  parser.hpp  precedence.hpp  statements.cpp
src/types/: CMakeLists.txt  IType.hpp  array.cpp  array.hpp  builtin.cpp  builtin.hpp  pointer.cpp  pointer.hpp  type.hpp
src/utils/: CMakeLists.txt  panic.cpp  panic.hpp
(+13 files in other folders)
